[gd_scene load_steps=4 format=3 uid="uid://b4xojb6sb1hqf"]

[ext_resource type="Script" uid="uid://cnwk5jgcw7ohq" path="res://assets/gun/gun.gd" id="1_danae"]

[sub_resource type="BoxMesh" id="BoxMesh_d6veg"]
size = Vector3(0.2, 0.2, 0.6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_danae"]
albedo_color = Color(0, 0.341176, 1, 1)

[node name="Gun" type="Node3D"]
script = ExtResource("1_danae")
bullet_speed = 40.0

[node name="GunMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.182113)
mesh = SubResource("BoxMesh_d6veg")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_danae")

[node name="BulletSpawner" type="Node3D" parent="GunMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.08448e-08, 0, -0.411403)

[node name="FireTimer" type="Timer" parent="."]

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[connection signal="timeout" from="FireTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
